delete Product API/frontend
