# backend/internal/routes/routes.go
@@ -11,9 +11,8 @@ func RegisterRoutes(app *fiber.App) {
 	app.Get("/api/health", handlers.HealthCheck)
 	app.Post("/api/register", handlers.RegisterUser)
 	app.Post("/api/login", handlers.LoginUser)
-	app.Get("/api/events", handlers.ListEvents)
-	app.Post("/api/events", handlers.CreateEvent)
 	app.Get("/api/products", handlers.ListProducts)
+	app.Delete("/api/products/:productId", handlers.DeleteProduct)
 	app.Put("/api/products", handlers.CreateProduct)
 	app.Get("/api/stocks", handlers.ListStocks)
 	app.Post("/api/stocks", handlers.CreateStock)
